Revert "Revert PR39 'Adds semantic versioning and release publishing'"
This reverts commit ac67f4d9ed525df92fdb3b349c0245e4a204d7c7.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "chakra"
 requires-python = ">=3.7"
-version = "0.0.4"
+dynamic = ["version"]
 readme = "README.md"
 license = {file = "LICENSE.md"}
 authors = [
@@ -63,3 +63,6 @@ exclude = [
 ]
 reportMissingImports = false
 reportAttributeAccessIssue = false
+
+[tool.setuptools.dynamic]
+version = {file = ["VERSION"]}
