--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -1,6 +1,6 @@
 name: Update version and publish release
 on: 
-    push:
+    pull_request:
         branches:
             - main
 jobs:
@@ -33,29 +33,3 @@ jobs:
           message: Release ${{ env.RELEASE_TAG }}
           add: "['VERSION', 'proto.lock']"
           push: "-o ci.skip"
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ env.RELEASE_TAG }}
-          release_name: Release ${{ env.RELEASE_TAG }}
-          body: |
-            Release ${{ env.RELEASE_TAG }}
-          draft: false
-          prerelease: false
-      - name: Build wheel
-        run: |
-          pip install --upgrade build
-          python3 -m build
-      - name: Upload Release Asset
-        id: upload-release-asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./dist/chakra-${{ env.RELEASE_TAG }}-py3-none-any.whl
-          asset_name: chakra.whl
-          asset_content_type: application/whl
