--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -10,6 +10,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           ref: ${{ github.event.pull_request.head.ref }}
+          repository: ${{ github.event.pull_request.head.repo.full_name }}
       - uses: actions/setup-python@v2
         with:
           python-version: 3.7
