--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -1,4 +1,4 @@
-name: Update version and publish release
+name: Update version
 on: 
     pull_request:
         branches:
@@ -11,6 +11,7 @@ jobs:
         with:
           ref: ${{ github.event.pull_request.head.ref }}
           repository: ${{ github.event.pull_request.head.repo.full_name }}
+          token: ${{ secrets.GITHUB_TOKEN }}
       - uses: actions/setup-python@v2
         with:
           python-version: 3.7
