--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -3,6 +3,10 @@ on:
     pull_request:
         branches:
             - main
+permissions:
+  contents: write
+  pull-requests: write
+  issues: write
 jobs:
   build:
     runs-on: ubuntu-latest
