--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -7,6 +7,7 @@ permissions:
   contents: write
   pull-requests: write
   issues: write
+  pages: write
 jobs:
   build:
     runs-on: ubuntu-latest
