--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -8,6 +8,7 @@ permissions:
   pull-requests: write
   issues: write
   pages: write
+  repository-projects: write
 jobs:
   build:
     runs-on: ubuntu-latest
