--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -9,6 +9,7 @@ permissions:
   issues: write
   pages: write
   repository-projects: write
+  id-token: write
 jobs:
   build:
     runs-on: ubuntu-latest
