--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -12,6 +12,13 @@ permissions:
   id-token: write
 jobs:
   build:
+    permissions:
+      contents: write
+      pull-requests: write
+      issues: write
+      pages: write
+      repository-projects: write
+      id-token: write
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
