--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -41,12 +41,20 @@ jobs:
         run: |
             python3 version.py
             echo "RELEASE_TAG=$(cat VERSION)" >> $GITHUB_ENV
+            git config user.name actions-user
+            git config user.email actions@github.com
+            git add VERSION
+            git add proto.lock
+            git commit -m "Updates VERSION"
+            git tag -d v$(RELEASE_TAG) || true
+            git tag -a v$(RELEASE_TAG) -m "Release ${RELEASE_TAG}"
+            git push -o ci.skip
       - name: Commit changes
         uses: EndBug/add-and-commit@v9
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          author_name: GitHub Actions
+          author_name: GitHub_Actions
           author_email: actions@github.com
           message: Release ${{ env.RELEASE_TAG }}
           add: "['VERSION', 'proto.lock']"
