--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -41,6 +41,12 @@ jobs:
         run: |
             python3 version.py
             echo "RELEASE_TAG=$(cat VERSION)" >> $GITHUB_ENV
+            git config user.name actions-user
+            git config user.email actions@github.com
+            git add VERSION
+            git add proto.lock
+            git commit -m "Updates VERSION"
+            git push -o ci.skip
       - name: Commit changes
         uses: EndBug/add-and-commit@v9
         env:
