--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -3,20 +3,10 @@ on:
     pull_request:
         branches:
             - main
-permissions:
-  contents: write
-  pull-requests: write
-  issues: write
-  repository-projects: write
-  id-token: write
+permissions: write-all
 jobs:
   build:
-    permissions:
-      contents: write
-      pull-requests: write
-      issues: write
-      repository-projects: write
-      id-token: write
+    permissions: write-all
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
