--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -29,6 +29,8 @@ jobs:
             python3 version.py
             echo "RELEASE_TAG=$(cat VERSION)" >> $GITHUB_ENV
             cat VERSION
+            git status
+            git diff
       - name: Commit changes
         uses: EndBug/add-and-commit@v9
         with:
