--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -13,6 +13,7 @@ jobs:
         with:
           ref: ${{ github.event.pull_request.head.ref }}
           repository: ${{ github.event.pull_request.head.repo.full_name }}
+          token: ${{secrets.GITHUB_TOKEN}}
       - uses: actions/setup-python@v2
         with:
           python-version: 3.7
@@ -33,6 +34,8 @@ jobs:
             git diff
       - name: Commit changes
         uses: EndBug/add-and-commit@v9
+        env:
+          GITHUB_TOKEN: ${{ secrets.MLCOMMONS_BOT_CLA_TOKEN }}
         with:
           author_name: GitHub_Actions
           author_email: actions@github.com
