--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -13,7 +13,7 @@ jobs:
         with:
           ref: ${{ github.event.pull_request.head.ref }}
           repository: ${{ github.event.pull_request.head.repo.full_name }}
-          token: ${{secrets.GITHUB_TOKEN}}
+          token: ${{secrets.MLCOMMONS_BOT_CLA_TOKEN}}
       - uses: actions/setup-python@v2
         with:
           python-version: 3.7
