--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -40,4 +40,4 @@ jobs:
           message: Release ${{ env.RELEASE_TAG }}
           add: "['VERSION', 'proto.lock']"
           push: "-o ci.skip"
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ github.token }}
